# python-project-lvl1

./: README.md  pyproject.toml
.github/workflows/: pyci.yml
brain_games/: cli.py  engine.py
brain_games/games/: brain_games.py  brain_gcd.py  calc.py  counts.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  counts.py  even.py  gcd.py  progression.py  welcome.py
brain_games/scripts/games/: brain_calc.py  brain_even.py
