[tool.poetry]
name = "Ana-ana_brain_games"
version = "0.7.0"
description = ""
authors = ["Ana-ana"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[tool.poetry.scripts]
brain-games = "brain_games.games.brain_games:main"
brain-even = "brain_games.games.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-gcd = "brain_games.games.brain_gcd:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

